[package]
name = "suit-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = {version = "0.2"}
suit-logic = { path = "../../suit-logic" }
js-sys = "0.3.52"
web-sys = { version = "0.3.52", features = ["Window", "Storage"] }
console_error_panic_hook = "0.1.6"
